[project]
name = "trace360"
version = "0.1.0"
description = "Simple evidence collection engine for Jira, GCP, and future connectors."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-cloud-storage>=2.18.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "typer>=0.12.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
]

[project.scripts]
trace360 = "evidence_engine.cli:app"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.hatch.build.targets.wheel]
packages = ["evidence_engine"]
